--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -21,6 +21,8 @@
     "@storybook/addon-actions": "8.4.4",
     "@storybook/addon-knobs": "8.0.1",
     "@storybook/addon-links": "8.4.4",
+    "@storybook/manager-api": "8.4.4",
+    "@storybook/preview-api": "8.4.4",
     "@storybook/addons": "7.6.17",
     "@storybook/react-webpack5":"^8.4.4",
     "@storybook/preset-create-react-app": "8.4.4",
