--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -18,22 +18,23 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.4.22",
-    "@storybook/addon-knobs": "6.4.0",
-    "@storybook/addon-links": "6.4.22",
-    "@storybook/addons": "6.4.22",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
-    "@storybook/preset-create-react-app": "4.1.2",
-    "@storybook/react": "6.4.22",
+    "@storybook/addon-actions": "8.4.4",
+    "@storybook/addon-knobs": "8.0.1",
+    "@storybook/addon-links": "8.4.4",
+    "@storybook/manager-api": "8.4.4",
+    "@storybook/preview-api": "8.4.4",
+    "@storybook/addons": "7.6.17",
+    "@storybook/react-webpack5":"^8.4.4",
+    "@storybook/preset-create-react-app": "8.4.4",
+    "@storybook/react": "8.4.4",
     "storybook-addon-jsx": "^7.3.14",
-    "storybook-dark-mode": "^1.1.0"
+    "storybook-dark-mode": "^4.0.2"
   },
   "scripts": {
     "start": "npm run storybook",
-    "storybook": "start-storybook -p 9009",
-    "build-storybook": "build-storybook --output-dir ../example/build/storybook",
-    "build-storybook-dev": "build-storybook --output-dir ./build",
+    "storybook": "storybook dev -p 9009",
+    "build-storybook": "storybook build --output-dir ../example/build/storybook",
+    "build-storybook-dev": "storybook build --output-dir ./build",
     "serve": "npx serve build"
   },
   "eslintConfig": {
