--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.25",
+    "axios": "^1.8.4",
     "history": "^5.3.0",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
