--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -25,8 +25,7 @@
     "react-router": "react-router",
     "react-router-dom": "react-router-dom",
     "react-use-websocket": "react-use-websocket",
-    "styled-components": "styled-components",
-    "eslint-config-react-app": "eslint-config-react-app"
+    "styled-components": "styled-components"
   },
   "browserslist": [
     ">0.2%",
