--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scorer-ui-kit",
-  "version": "1.2.7",
+  "version": "1.2.7-liveboard-patch.2",
   "description": "SCORER UI Components",
   "author": "Josh Lipps",
   "license": "MIT",
