--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^16.0.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "history": "^5.3.0",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
