--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,9 +7,11 @@
     "@future-standard/icons": "^2.0.1",
     "@types/jest": "^28.1.6",
     "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "history": "^5.3.0",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -27,7 +29,6 @@
     "@storybook/react-webpack5":"^8.4.4",
     "@storybook/preset-create-react-app": "8.4.4",
     "@storybook/react": "8.4.4",
-    "storybook-addon-jsx": "^7.3.14",
     "storybook-dark-mode": "^4.0.2"
   },
   "scripts": {
