--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -30,21 +30,22 @@
     "link": "npm link && npm link react && npm link react-dom && npm link react-router-dom && npm link styled-components"
   },
   "peerDependencies": {
-    "react": "^17.0.2 || ^18.0.0",
-    "react-dom": "^17.0.2 || ^18.0.0",
+    "react": "^17.0.2 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.2 || ^18.0.0 || ^19.0.0",
     "react-router": "^5.3.1",
     "react-router-dom": "^5.2.0",
     "react-use-websocket": "^2.9.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@svgr/cli": "^6.3.1",
     "@types/jest": "^28.1.6",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.defaultsdeep": "^4.6.7",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
+    "@types/react": "^18.0.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
@@ -62,8 +63,8 @@
     "gh-pages": "^5.0.0",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-use-websocket": "^2.9.1",
@@ -74,7 +75,7 @@
   ],
   "dependencies": {
     "@future-standard/icons": "^2.0.1",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^18.0.0",
     "date-fns": "^2.29.1",
     "immutability-helper": "^3.1.1",
     "lodash.debounce": "^4.0.7",
