--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,9 +7,12 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/styled-components": "^5.1.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^5.3.1",
+    "react-router-dom": "^5.2.0",
+    "react-use-websocket": "^2.9.1",
+    "styled-components": "^6.1.0",
     "history": "^5.3.0",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
